[package]
name = "token_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
axum = "0.7.4"
reqwest = "0.11.23"
token_common = { version = "0.1.0", path = "../token_common" }
tokio = { version = "1.35.1", features = ["full"] }
